login, logout and sigup API implementations completed